--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
+    "postinstall": "patch-package",
     "test": "jest"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "nativewind": "^2.0.11",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-flipper": "^0.211.0",
